[BE] fix: 상권 분석쪽 Map Struct를 이용한 매핑 처리로 리팩토링